# fastapi-boilerplate

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: .env.sample  alembic.ini
src/apps/: models_to_migrations.py
src/apps/ping/: apis.py  controllers.py  models.py
src/core/: config.py  events.py  main.py  router.py
src/migrations/: env.py
src/migrations/versions/: 66128656b998_init.py
src/services/: __init__.py
src/services/postgres/: connection.py  service.py
src/services/redis/: service.py
src/utils/: app.py  common_models.py  exceptions.py  ext.py
