[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.120.1",
    "pre-commit>=4.3.0",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.27",
]
