[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioredis>=2.0.1",
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.120.1",
    "pre-commit>=4.3.0",
    "pydantic-settings==2.1",
    "redis[hiredis]>=7.0.1",
    "sqlmodel>=0.0.27",
]
